# DataModelBuilder

./: .gitignore  DataModelBuilder.pro  DesignForm.ui.qml  Object.qml  README.md  main.cpp  main.qml  objectlist.cpp  objectlist.h  objectmodel.cpp  objectmodel.h  qml.qrc  src.qrc
Client/: .gitignore  CMakeLists.txt  DataModelBuilder.pro  build-deps.py  build.bat  build_qvl.sh  deliver_qvl.sh  deploy.bat  main.cpp  main.qml  run.bat  test.qml
Client/UI/: BodyBlock.qml  CentralBlock.qml  ChooseFileDialog.qml  ContentBlock.ui.qml  ContentListFooter.qml  CurrentFileMenu.qml  DataModelBuilderUI.qml  DataModelBuilderUI.qmlproject.qtds  DataModelBuilderUI.qrc  DialogBottomRow.qml  DialogMessage.qml  DialogTemplate.qml  EditField.qml  EnterTextLineDialog.qml  FileMenu.qml  InteractiveListElement.qml  InteractiveListView.qml  ItemInContent.qml  ObjectInLibrary.qml  ObjectsLibrary.ui.qml  ObjectsLibraryListFooter.qml  ParamInItem.qml  ParamListFooter.qml  ParamValue.qml  PreInstantiateDialog.qml  PropListBlock.qml  RecentFilesMenu.qml  SaveAsDialog.qml  SelectedItem.qml  SelectedObject.qml  SelectedObjectParam.qml  Shortcuts.qml  TypeInstanceControl.qml  TypeInstanceMenu.qml  VLListElement.qml  VarInterface.qml  VarListFooter.qml
Client/UI/imports/DataModelBuilderUI/: DirectoryFontLoader.qml
Client/UI/imports/DataModelBuilderUI/designer/: plugin.metainfo
Client/include/: AppObject.h  DMBModel.h  DMBUtils.h  GlobalContext.h  ModelsFwd.h  ObjectProperty.h  PropListModel.h  TypeListModel.h  TypeModel.h  Utils.h  VLCollectionModel.h  VLListModel.h  VLListModelInterface.h  VLListVarModel.h  VLObjectVarModel.h  VLVarModel.h  VarModelFactory.h
Client/src/: AppObject.cpp  DMBModel.cpp  DMBUtils.cpp  GlobalContext.cpp  ObjectProperty.cpp  PropListModel.cpp  TypeListModel.cpp  TypeModel.cpp  Utils.cpp  VLCollectionModel.cpp  VLListModel.cpp  VLListModelInterface.cpp  VLListVarModel.cpp  VLObjectVarModel.cpp  VLVarModel.cpp  VarModelFactory.cpp  object.cpp  object.h  objectlistmodel.cpp  objectlistmodel.h  objectparameter.cpp  objectparameter.h  parameterlistmodel.cpp  parameterlistmodel.h
Core/: CMakeLists.txt  CoreConfig.h.in  build.bat  build.py  build.sh  build_tests.sh  clean.py  clean_deps.py  deps_scenario.sh  external_config.sh  get_dependencies.sh  main.cpp  pull_vl.sh  rebuild.sh  test.cpp
Core/VL/: CMakeLists.txt
Core/VL/JSONConverter/: CMakeLists.txt  JSONLoader.cpp  VL  build.bat  build.sh
Core/VL/VL/: CMakeLists.txt
Core/docs/: .gitignore  collect_sources.sh
Core/include/: DMBCore.h  VLBackwardTraversable.h  VLUtility.h
Core/src/: DMBCore.cpp  VLBackwardTraversable.cpp  VLUtility.cpp
Core/tests/: content_filling_test_out_check.json  remove_test_out_check.json  simple_proto_test_out_check.json  simple_test_remove_array_out_check.json
Core/tests/input/: database_test.json  database_test_2.json  new_model.json  remove_test.json  separate_content.json  simple_load_test.json
Core/tests/output/: custom_proto_test_out.json  remove_test_proto_shift_out.json  simple_test_out.json
QVL/: .gitignore  CMakeLists.txt  build-deps.bat  build.bat  build_dmbcore.sh  qvl.pro  update_cmake_modules.sh  update_scripts.sh
QVL/include/: AllPropsCollectionModel.h  AllPropsStorageSubscriptionProcessor.h  AllPropsSubscriptionProcessor.h  CollectionModelSubscriptionProcessor.h  DMBModel.h  DMBUtils.h  ListModelStorage.h  ListModelStorageSubscriptionProcessor.h  ListModelSubscriptionProcessor.h  ModelStorage.h  ModelStorageSubscriptionProcessor.h  ModelsFwd.h  NotifContext.h  ObjectModelStorage.h  ObjectModelStorageSubscriptionProcessor.h  ObjectProperty.h  OwnPropsCollectionModel.h  OwnPropsStorageSubscriptionProcessor.h  OwnPropsSubscriptionProcessor.h  PropPath.h  VLCollectionModel.h  VLListModel.h  VLListModelInterface.h  VLListVarModel.h  VLObjectVarModel.h  VLVarModel.h  VarModelFactory.h
QVL/src/: AllPropsCollectionModel.cpp  AllPropsStorageSubscriptionProcessor.cpp  AllPropsSubscriptionProcessor.cpp  CollectionModelSubscriptionProcessor.cpp  DMBModel.cpp  DMBUtils.cpp  ListModelStorage.cpp  ListModelStorageSubscriptionProcessor.cpp  ListModelSubscriptionProcessor.cpp  ModelStorage.cpp  ModelStorageSubscriptionProcessor.cpp  NotifContext.cpp  ObjectModelStorage.cpp  ObjectModelStorageSubscriptionProcessor.cpp  ObjectProperty.cpp  OwnPropsCollectionModel.cpp  OwnPropsStorageSubscriptionProcessor.cpp  OwnPropsSubscriptionProcessor.cpp  PropPath.cpp  UniqueIdList.cpp  VLCollectionModel.cpp  VLListModel.cpp  VLListModelInterface.cpp  VLListVarModel.cpp  VLObjectVarModel.cpp  VLVarModel.cpp  VarModelFactory.cpp
UI/: DataModelBuilderUI.qml  DataModelBuilderUI.qmlproject  DataModelBuilderUI.qmlproject.qtds  DataModelBuilderUI.qrc  ObjectInLibrary.qml  ObjectsLibrary.ui.qml  ObjectsLibraryListFooter.qml  ParamListFooter.qml  Screen01.ui.qml  SelectedObject.qml  SelectedObjectParam.qml
src/: object.cpp  object.h  objectlistmodel.cpp  objectlistmodel.h  objectparameter.cpp  objectparameter.h  parameterlistmodel.cpp  parameterlistmodel.h
